[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/img/Fondos/MAPAPRINCIPAL.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Mapa.gd" type="Script" id=3]
[ext_resource path="res://assets/img/Iconos/buttonLarge.png" type="Texture" id=4]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_2.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_1.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_3.png" type="Texture" id=7]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_4.png" type="Texture" id=8]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_5.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Monedas/gold_coin_round_star_6.png" type="Texture" id=10]
[ext_resource path="res://assets/img/fishingrod.png" type="Texture" id=11]
[ext_resource path="res://assets/img/lobolino/lobolino_00004.png" type="Texture" id=12]
[ext_resource path="res://assets/img/lobolino/lobolino_00005.png" type="Texture" id=13]
[ext_resource path="res://Minijuegos/Lanchas/assets/fc96e3af6cdbeb035e72df54427fb01c.png" type="Texture" id=14]
[ext_resource path="res://assets/img/lobolino/lobolino_00001.png" type="Texture" id=15]
[ext_resource path="res://assets/img/lobolino/lobolino_00000.png" type="Texture" id=16]
[ext_resource path="res://assets/img/lobolino/lobolino_00002.png" type="Texture" id=17]
[ext_resource path="res://assets/img/lobolino/lobolino_00003.png" type="Texture" id=18]
[ext_resource path="res://assets/img/Iconos/volver.png" type="Texture" id=19]
[ext_resource path="res://assets/img/Iconos/tapLeft.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 0.984314, 0.984314, 0.984314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "AnchorIdle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Intro/TextureRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 812.159, -0.25, 0, 0.25, 0, 812.159, -0.25, 0, 0.25, 0, 812.159, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Intro/TextureRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 512.936, -0.25, 0, 0.25, 0, 522.936, -0.25, 0, 0.25, 0, 512.936, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 170, 250 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "pesca"
tracks/0/type = "value"
tracks/0/path = NodePath("Tap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 190 ), Vector2( 680, 250 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "play"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Tap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 170, 250 ), Vector2( 170, 350 ) ]
}

[node name="Mapa" type="Node2D"]
script = ExtResource( 3 )

[node name="Mapa_principal" type="Sprite" parent="."]
position = Vector2( 512.5, 305 )
scale = Vector2( 0.928572, 0.830688 )
texture = ExtResource( 1 )

[node name="Lancha" type="Button" parent="."]
margin_left = 121.0
margin_top = 380.0
margin_right = 206.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 1 )
text = "Jugar"
flat = true

[node name="Lobo" type="Button" parent="."]
margin_left = 326.0
margin_top = 471.0
margin_right = 419.0
margin_bottom = 532.0
custom_fonts/font = SubResource( 1 )
text = "Jugar"
flat = true

[node name="Pesca" type="Button" parent="."]
margin_left = 627.0
margin_top = 281.0
margin_right = 720.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
text = "Jugar"
flat = true

[node name="Tienda" type="Button" parent="."]
margin_left = 528.0
margin_top = 360.0
margin_right = 635.0
margin_bottom = 421.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tienda"
flat = true

[node name="Restaurante" type="Button" parent="."]
margin_left = 797.0
margin_top = 145.0
margin_right = 979.0
margin_bottom = 206.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Restaurante"
flat = true

[node name="ButtonLarge" type="Sprite" parent="."]
position = Vector2( 514.5, 27.25 )
scale = Vector2( 5.25, 0.85 )
texture = ExtResource( 4 )

[node name="Fishingrod" type="Sprite" parent="ButtonLarge"]
position = Vector2( -44.8637, -6.02459 )
scale = Vector2( 0.0170774, 0.0347762 )
texture = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ButtonLarge"]
position = Vector2( -88.4768, -5.89285 )
scale = Vector2( 0.251457, 0.921428 )
frames = SubResource( 3 )
frame = 3
playing = true

[node name="Intro" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="TextureButton" parent="Intro"]
margin_left = 394.0
margin_top = 355.0
margin_right = 1029.0
margin_bottom = 601.0
expand = true
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="Intro/Panel"]
margin_left = 92.0
margin_top = 59.0
margin_right = 640.0
margin_bottom = 244.0
color = Color( 0.960784, 0.964706, 0.356863, 1 )

[node name="ColorRect2" type="ColorRect" parent="Intro/Panel"]
margin_left = 99.0
margin_top = 66.0
margin_right = 623.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Intro/Panel"]
margin_left = 107.0
margin_top = 74.0
margin_right = 613.0
margin_bottom = 229.0
color = Color( 0.960784, 0.964706, 0.356863, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Intro/Panel"]
margin_left = 110.0
margin_top = 72.0
margin_right = 517.0
margin_bottom = 211.0
mouse_filter = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Bienvenido al Puerto de Mar del Plata, ten√©s ganas de hacer un negocio GENIAL?"
fit_content_height = true

[node name="Sprite" type="AnimatedSprite" parent="Intro"]
position = Vector2( 947, 480 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 5 )
frame = 6
playing = true
flip_h = true

[node name="TextureRect" type="TextureRect" parent="Intro"]
pause_mode = 2
margin_left = 812.159
margin_top = 512.936
margin_right = 852.159
margin_bottom = 552.936
texture = ExtResource( 14 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Intro"]
pause_mode = 2
root_node = NodePath("../..")
method_call_mode = 1
anims/AnchorIdle = SubResource( 6 )

[node name="Anzuelos" type="Label" parent="."]
margin_left = 319.0
margin_top = 2.0
margin_right = 369.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Player" type="Label" parent="."]
margin_left = 411.0
margin_top = 2.0
margin_right = 539.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Player:"

[node name="NamePlayer" type="Label" parent="."]
margin_left = 556.0
margin_top = 2.0
margin_right = 684.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "Chaby"

[node name="Monedas" type="Label" parent="."]
margin_left = 93.0
margin_top = 2.0
margin_right = 118.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="VolverMenu" type="TextureButton" parent="."]
margin_left = 938.0
margin_right = 986.0
margin_bottom = 48.0
texture_normal = ExtResource( 19 )

[node name="Tap" type="Sprite" parent="."]
position = Vector2( 170, 250 )
rotation = -1.5708
texture = ExtResource( 20 )

[node name="AnimationTap" type="AnimationPlayer" parent="Tap"]
pause_mode = 2
root_node = NodePath("../..")
method_call_mode = 1
anims/RESET = SubResource( 7 )
anims/pesca = SubResource( 9 )
anims/play = SubResource( 8 )

[connection signal="pressed" from="Lancha" to="." method="_on_Lancha_pressed"]
[connection signal="pressed" from="Lobo" to="." method="_on_Lobo_pressed"]
[connection signal="pressed" from="Pesca" to="." method="_on_Pesca_pressed"]
[connection signal="pressed" from="Tienda" to="." method="_on_Tienda_pressed"]
[connection signal="pressed" from="Restaurante" to="." method="_on_Restaurante_pressed"]
[connection signal="pressed" from="Intro/Panel" to="." method="_on_Panel_pressed"]
[connection signal="pressed" from="VolverMenu" to="." method="_on_VolverMenu_pressed"]
